--- a/kit/pom.xml
+++ b/kit/pom.xml
@@ -4,6 +4,7 @@
 
 	<groupId>hcy.util</groupId>
 	<artifactId>kit</artifactId>
+	
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -12,6 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
